# shooter

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  start_flower.sh  test.sh
.github/workflows/: e2e_test.yaml  unit_test.yaml
docs/: generate_diagrams.py
shooter/: __main__.py  actions.py  app.py  celery_app.py  draw.py  logs.py  schema.py
shooter/drivers/: __init__.py  base.py  chrome.py  device.py  firefox.py
tests/: conftest.py  test_app.py  test_draw.py  test_logs.py  test_schema.py  test_screenshot.py
tests/drivers/: test_base.py  test_drivers.py
